--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TwoSmallForms</title>
-	<link rel="stylesheet" href="reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
 			<div class="notif__photo"></div>
 			<div class="notif__text">
 				<p>Username</p>
-				<p>25 years</p>
-				<p>London, UK</p>
+				<p class="notif__text--color">25 years</p>
+				<p class="notif__text--color">London, UK</p>
 			</div>
 			<a href="#" class="notif__button notif__button--message">message</a>  
 			<a href="#" class="notif__button notif__button--like">like photo</a>
@@ -31,15 +31,15 @@
 			
 			<div class="notif__photo"></div>
 			<div class="notif__text">
-				<p>Username</p>
-				<p>25 years</p>
-				<p>London, UK</p>
+				<p class="white">Username</p>
+				<p class="notif__text--color">25 years</p>
+				<p class="notif__text--color">London, UK</p>
 			</div>
 	
 			<div class="notif__button-wrapper">
 				
 				<a href="#" class="b-button notif__button--message">message</a>  
-				<a href="#" class="b-button notif__button--like notif__button--like-color">like photo</a>
+				<a href="#" class="b-button notif__button--like notif__button--like-color white">like photo</a>
 				
 			</div>	
 		</div>
